# MCP-Learning

./: setup.md
Archive/ai-lab-learning-hub-main/: .gitignore  README.md  pyproject.toml
Archive/ai-lab-learning-hub-main/.ipynb_checkpoints/: setup-checkpoint.md
Archive/ai-lab-learning-hub-main/Advanced-Prompting/: advanced-prompting.ipynb  hotpotqa_train.pkl
Archive/ai-lab-learning-hub-main/Agents/: Translation_agents_JSW.ipynb
Archive/ai-lab-learning-hub-main/Introduction/: Introduction_to_API_and_Prompting.ipynb  OpenAIPlatform@Genmab.md  requirements1.txt  (+1 more)
MCP-SERVER-HTTP-STREAMABLE/: pyproject.toml  server.py
ai-lab-learning-hub-main/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.ipynb  setup.md
ai-lab-learning-hub-main/Advanced-Prompting/: advanced-prompting-ANSWERS.ipynb  advanced-prompting.ipynb  hotpotqa_dev.pkl
ai-lab-learning-hub-main/Agents/: Translation_agents.ipynb
ai-lab-learning-hub-main/Agents/.ipynb_checkpoints/: Translation_agents-checkpoint.ipynb
ai-lab-learning-hub-main/Introduction/: Introduction_to_API_and_Prompting.ipynb
ai-lab-learning-hub-main/Introduction/.ipynb_checkpoints/: Introduction_to_API_and_Prompting-checkpoint.ipynb
ai-lab-learning-hub-main/RAG/: RAG_CONCEPTS.md  README.md
ai-lab-learning-hub-main/RAG/DIYRAG-FAISS/: .gitignore  README.md  load_chunk_embed_store.py  prompts  query_retrieve_generate.py  rag_app.py
ai-lab-learning-hub-main/RAG/DIYRAG-langchain/: RAG_tutorial_Langchain.ipynb  README.md
ai-lab-learning-hub-main/RAG/openai-managed-rag/: README.md  html_templates.py  ragapp.py
(+7 files in other folders)
